--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,75 +14,48 @@
 </head>
 
 <body>
+    <%- include('navbar') %>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <main>
 
-            <a class="navbar-brand" href="/home">
-                <img src="/images/train.png" alt="" width="30" height="30" class="d-inline-block align-text-top m-2">
-                <h5 class="d-inline-block align-text-top m-2">Ticketac</h5>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-danger fw-bold" href="/login">Connection
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active " href="#">My last trips
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <main>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="titre">
-                    <h4 class="mt-5 mb-4 text-white text-center">One way ticket :</h4>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="titre">
+                        <h4 class="mt-5 mb-4 text-white text-center">One way ticket :</h4>
+                    </div>
                 </div>
-            </div>
-            <form action="/search" method="post">
-                <div class="row justify-content-center">
+                <form action="/search" method="post">
+                    <div class="row justify-content-center">
 
-                    <div class="form-group col-3 ">
-                        <input type="text" name="depart" class="form-control" placeholder="From: Paris, Marseille..."
-                            aria-label="from" aria-describedby="basic-addon2">
+                        <div class="form-group col-3 ">
+                            <input type="text" name="depart" class="form-control"
+                                placeholder="From: Paris, Marseille..." aria-label="from"
+                                aria-describedby="basic-addon2">
+                        </div>
+
+                        <div class="form-group col-3">
+                            <input type="text" name="arrival" class="form-control" placeholder="To: Lille, Nantes..."
+                                aria-label="from" aria-describedby="basic-addon2">
+                        </div>
+
+                        <div class="form-group col-3">
+                            <input type="date" name="date" class="form-control" aria-label="from"
+                                aria-describedby="basic-addon2">
+                        </div>
+
+                        <button type="submit" class="btn btn-danger col-1 ms-3">Go</button>
                     </div>
+                </form>
 
-                    <div class="form-group col-3">
-                        <input type="text" name="arrival" class="form-control" placeholder="To: Lille, Nantes..."
-                            aria-label="from" aria-describedby="basic-addon2">
-                    </div>
-
-                    <div class="form-group col-3">
-                        <input type="date" name="date" class="form-control" aria-label="from"
-                            aria-describedby="basic-addon2">
-                    </div>
-
-                    <button type="submit" class="btn btn-danger col-1 ms-3">Go</button>
+                <div class="row d-flex justify-content-center">
+                    <img id="landmark" src="/images/landmark.png" class="my-5" alt="landmark">
                 </div>
-            </form>
 
-            <div class="row d-flex justify-content-center">
-                <img id="landmark" src="/images/landmark.png" class="my-5" alt="landmark">
             </div>
-
-        </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
