--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="titre">
-                        <h4 class="mt-5 mb-4 text-white text-center">One way ticket :</h4>
+                        <h4 class="mt-5 mb-4 text-white offset-4">One way ticket :</h4>
                     </div>
                 </div>
                 <form action="/search" method="post">
