--- a/views/order.ejs
+++ b/views/order.ejs
@@ -30,22 +30,22 @@
                     <div class="col-8">
                         <table class="table table-hover">
                             <tr class="table-light p-2">
-                                <th>Date</th>
-                                <th>Journey</th>
-                                <th>Departure time</th>
-                                <th>Price</th>
+                                <th class="p-3">Date</th>
+                                <th class="p-3">Journey</th>
+                                <th class="p-3">Departure time</th>
+                                <th class="p-3">Price</th>
                             </tr>
                             <tr class="table-light">
-                                <td>02/12/18</td>
-                                <td>Lille-Dijon</td>
-                                <td>15:00</td>
-                                <td>68€</td>
+                                <td class="p-3">02/12/18</td>
+                                <td class="p-3">Lille-Dijon</td>
+                                <td class="p-3">15:00</td>
+                                <td class="p-3">68€</td>
                             </tr>
                             <tr class="table-light">
-                                <td>12/12/12</td>
-                                <td>Rouen-Paris</td>
-                                <td>12:00</td>
-                                <td>63€</td>
+                                <td class="p-3">12/12/12</td>
+                                <td class="p-3">Rouen-Paris</td>
+                                <td class="p-3">12:00</td>
+                                <td class="p-3">63€</td>
                             </tr>
 
                         </table>
