--- a/views/card.ejs
+++ b/views/card.ejs
@@ -30,32 +30,32 @@
                     <div class="col-8">
                         <table class="table table-hover">
                             <tr class="table-light">
-                                <th scope="row">N°</th>
-                                <th>Journey</th>
-                                <th>Date</th>
-                                <th>Departure time</th>
-                                <th>Price</th>
+                                <th class="p-3" scope="row">N°</th>
+                                <th class="p-3">Journey</th>
+                                <th class="p-3">Date</th>
+                                <th class="p-3">Departure time</th>
+                                <th class="p-3">Price</th>
                             </tr>
                             <tr class="table-light">
-                                <th scope="row">1</th>
-                                <td>Paris/Lille</td>
-                                <td>02/12/18</td>
-                                <td>15:00</td>
-                                <td>68€</td>
+                                <th class="p-3" scope="row">1</th>
+                                <td class="p-3">Paris/Lille</td>
+                                <td class="p-3">02/12/18</td>
+                                <td class="p-3">15:00</td>
+                                <td class="p-3">68€</td>
                             </tr>
                             <tr class="table-light">
-                                <th scope="row">2</th>
-                                <td>Paris/Bordeaux</td>
-                                <td>02/12/18</td>
-                                <td>12:00</td>
-                                <td>63€</td>
+                                <th class="p-3" scope="row">2</th>
+                                <td class="p-3">Paris/Bordeaux</td>
+                                <td class="p-3">02/12/18</td>
+                                <td class="p-3">12:00</td>
+                                <td class="p-3">63€</td>
                             </tr>
                             <tr class="table-danger">
-                                <th scope="row">Total</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>150€</td>
+                                <th class="p-3" scope="row">Total</th>
+                                <td class="p-3"></td>
+                                <td class="p-3"></td>
+                                <td class="p-3"></td>
+                                <td class="p-3">150€</td>
                             </tr>
                         </table>
                     </div>
