--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,12 +17,11 @@
                <div class="row ">
                     <div class="col-12 text-center d-flex justify-content-center">
                          <div>
-                              <h1 class="text-light">Sign-in :</h1>
+                              <h3 class="text-light mb-4">Sign-in :</h3>
                               <form action="/users/sign-in" Method="POST">
                                    <div class="form-group">
                                         <input type="email" name="email" class="form-control mb-2"
-                                             id="exampleInputEmail1" aria-describedby="emailHelp"
-                                             placeholder="Enter email">
+                                             id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                                    </div>
                                    <div class="form-group">
                                         <input type="password" name="password" class="form-control mb-2"
@@ -32,7 +31,7 @@
                               </form>
                          </div>
                          <div>
-                              <h1 class="text-light">Sign-up :</h1>
+                              <h3 class="text-light mb-4">Sign-up :</h3>
                               <form action="/signUp" method="POST" class="mx-4">
                                    <div class="form-group">
                                         <input type="text" name="name" class="form-control mb-2" id="exampleName"
@@ -45,8 +44,8 @@
                                    </div>
                                    <div class="form-group">
                                         <input type="email" name="email" class="form-control mb-2"
-                                             id="exampleInputEmail1" aria-describedby="emailHelp"
-                                             placeholder="Enter email" value="">
+                                             id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email"
+                                             value="">
                                    </div>
                                    <div class="form-group">
                                         <input type="password" name="password" class="form-control mb-2"
