--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,13 +32,13 @@
                          </div>
                          <div>
                               <h3 class="text-light mb-4">Sign-up :</h3>
-                              <form action="/signUp" method="POST" class="mx-4">
+                              <form action="/users/sign-up" method="POST" class="mx-4">
                                    <div class="form-group">
-                                        <input type="text" name="name" class="form-control mb-2" id="exampleName"
+                                        <input type="text" name="lastname" class="form-control mb-2" id="exampleName"
                                              aria-describedby="nameHelp" placeholder="Name" value="">
                                    </div>
                                    <div class="form-group">
-                                        <input type="text" name="firstName" class="form-control mb-2"
+                                        <input type="text" name="firstname" class="form-control mb-2"
                                              id="exampleFirstName" aria-describedby="FirstNameHelp" value=""
                                              placeholder="FirstName">
                                    </div>
