--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -2,59 +2,49 @@
 <html lang="en">
 
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <link rel='stylesheet' href='/stylesheets/style.css' />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
-     <%- include('navbar') %>
+  <%- include('navbar') %>
 
-     <div id="container">
-        <div class="row col-12 mt-5 d-flex justify-content-center">
-          <div class="col-lg-6 mt-2 pl-5 text-white">
-            <h3 class="mb-2" style="color:white;">Tickets available on 02/08 :</h3>
-          </div>
-        </div>
-        <div class="row col-12 mt-3 d-flex justify-content-center align-items-center">
-          <div class="col-lg-6 mt-2 text-center">
-            <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
-                <span class="text-dark fw-bold">Paris / Lille</span>
-                <span class="text-secondary">train departure at : 15:00 pm</span>
-                <div>
-                  <span class="pr-2 text-dark fw-bold">93 €</span>
-                  <span><a href="/" class="btn btn-danger">Ok</a></span>
-                </div>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
-                <span class="text-dark fw-bold">Paris / Lille</span>
-                <span class="text-secondary">train departure at : 15:00 pm</span>
-                <div>
-                  <span class="pr-2 text-dark fw-bold">93 €</span>
-                  <span><a href="/" class="btn btn-danger">Ok</a></span>
-                </div>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
-                <span class="text-dark fw-bold">Paris / Lille</span>
-                <span class="text-secondary">train departure at : 15:00 pm</span>
-                <div>
-                  <span class="pr-2 text-dark fw-bold">93 €</span>
-                  <span><a href="/" class="btn btn-danger">Ok</a></span>
-                </div>
-              </li>
-            </ul>
-          </div>
+    <div id="container">
+      <div class="row col-12 mt-5 d-flex justify-content-center">
+        <div class="col-lg-6 mt-2 pl-5 text-white">
+          <h3 class="mb-2" style="color:white;">Tickets available on <%= date.getDate() %>/<%= date.getMonth()+1 %>/<%=
+                  date.getFullYear() %> :</h3>
         </div>
       </div>
-      
+      <div class="row col-12 mt-3 d-flex justify-content-center align-items-center">
+        <div class="col-lg-6 mt-2 text-center">
+          <ul class="list-group">
+            <% for(let i=0; i < matchingJourneys.length; i++) {%>
+              <li class="list-group-item d-flex justify-content-between align-items-center mb-2 py-4">
+                <span class="text-dark fw-bold">
+                  <%=matchingJourneys[i].departure%> / <%=matchingJourneys[i].arrival%>
+                </span>
+                <span class="text-secondary">train departure at : <%=matchingJourneys[i].departureTime%> h</span>
+                <div>
+                  <span class="pr-2 text-dark fs-5 fw-bold">
+                    <%=matchingJourneys[i].price%> €
+                  </span>
+                  <span><a href="/" class="btn btn-danger ms-3">Ok</a></span>
+                </div>
+              </li>
+              <%}%>
+          </ul>
+        </div>
+      </div>
+    </div>
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-     crossorigin="anonymous"></script>
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
