--- a/views/search.ejs
+++ b/views/search.ejs
@@ -24,11 +24,11 @@
                         <h4 class="mt-5 mb-4 text-white offset-4">One way ticket :</h4>
                     </div>
                 </div>
-                <form action="/search" method="post">
+                <form action="/booking" method="post">
                     <div class="row justify-content-center">
 
                         <div class="form-group col-2 ">
-                            <input type="text" name="depart" class="form-control"
+                            <input type="text" name="departure" class="form-control"
                                 placeholder="From: Paris, Marseille..." aria-label="from"
                                 aria-describedby="basic-addon2">
                         </div>
