--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -33,7 +33,7 @@
                   <span class="pr-2 text-dark fs-5 fw-bold">
                     <%=matchingJourneys[i].price%> €
                   </span>
-                  <span><a href="/" class="btn btn-danger ms-3">Ok</a></span>
+                  <span><a href="/addCard?id=<%=matchingJourneys[i]._id%>" class="btn btn-danger ms-3">Ok</a></span>
                 </div>
               </li>
               <%}%>
