--- a/views/card.ejs
+++ b/views/card.ejs
@@ -36,27 +36,38 @@
                                 <th class="p-3">Departure time</th>
                                 <th class="p-3">Price</th>
                             </tr>
-                            <tr class="table-light">
-                                <th class="p-3" scope="row">1</th>
-                                <td class="p-3">Paris/Lille</td>
-                                <td class="p-3">02/12/18</td>
-                                <td class="p-3">15:00</td>
-                                <td class="p-3">68€</td>
-                            </tr>
-                            <tr class="table-light">
-                                <th class="p-3" scope="row">2</th>
-                                <td class="p-3">Paris/Bordeaux</td>
-                                <td class="p-3">02/12/18</td>
-                                <td class="p-3">12:00</td>
-                                <td class="p-3">63€</td>
-                            </tr>
-                            <tr class="table-danger">
-                                <th class="p-3" scope="row">Total</th>
-                                <td class="p-3"></td>
-                                <td class="p-3"></td>
-                                <td class="p-3"></td>
-                                <td class="p-3">150€</td>
-                            </tr>
+                            <% total=0 %>
+                                <% for (let i=0; i < card.length; i++) {%>
+                                    <tr class="table-light">
+                                        <th class="p-3" scope="row">
+                                            <%= i +1%>
+                                        </th>
+                                        <td class="p-3">
+                                            <%= card[i].departure%>/<%= card[i].arrival%>
+                                        </td>
+                                        <td class="p-3">
+                                            <%= dateFormat(card[i].date)%>
+                                        </td>
+                                        <td class="p-3">
+                                            <%= card[i].departureTime%>
+                                        </td>
+                                        <td class="p-3">
+                                            <%= card[i].price%> €
+                                        </td>
+                                    </tr>
+                                    <% total +=card[i].price %>
+                                        <%}%>
+                                            <tr class="table-danger">
+                                                <th class="p-3" scope="row">
+                                                    Total
+                                                </th>
+                                                <td class="p-3"></td>
+                                                <td class="p-3"></td>
+                                                <td class="p-3"></td>
+                                                <td class="p-3">
+                                                    <%=total%> €
+                                                </td>
+                                            </tr>
                         </table>
                     </div>
                 </div>
