--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/search">
             <img src="/images/train.png" alt="" width="30" height="30" class="d-inline-block align-text-top m-2">
             <h5 class="d-inline-block align-text-top m-2">Ticketac</h5>
         </a>
@@ -14,11 +14,11 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="/login">Connection
+                    <a class="nav-link text-danger fw-bold" href="/">Connection
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active " href="#">My last trips
+                    <a class="nav-link active " href="/lasttrips">My last trips
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
