--- a/views/card.ejs
+++ b/views/card.ejs
@@ -71,8 +71,32 @@
                         </table>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-danger offset-9">Confirm</button>
+                <button type="submit" class="btn btn-danger offset-9" data-bs-toggle="modal"
+                    data-bs-target="#staticBackdrop">
+                    Confirm
+                </button>
             </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Paiement validé</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Votre commande a bien été confirmée. Bon voyage !
+                        </div>
+                        <div class="modal-footer">
+                            <a href="/search"><button type="button" class="btn btn-danger">Home</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
