--- a/views/card.ejs
+++ b/views/card.ejs
@@ -81,20 +81,21 @@
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">Paiement validé</h5>
+                            <div class="modal-content">
+                            <div class="modal-header">
+                             <h5 class="modal-title" id="staticBackdropLabel">Paiement validé</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             Votre commande a bien été confirmée. Bon voyage !
                         </div>
                         <div class="modal-footer">
-                            <a href="/search"><button type="button" class="btn btn-danger">Home</button></a>
+                            <a href="/confirm"><button type="button" class="btn btn-danger">Home</button></a>
                         </div>
                     </div>
                 </div>
             </div>
+
 
 
         </main>
