--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -35,23 +35,27 @@
                                 <th class="p-3">Departure time</th>
                                 <th class="p-3">Price</th>
                             </tr>
-                            <tr class="table-light">
-                                <td class="p-3">02/12/18</td>
-                                <td class="p-3">Lille-Dijon</td>
-                                <td class="p-3">15:00</td>
-                                <td class="p-3">68€</td>
-                            </tr>
-                            <tr class="table-light">
-                                <td class="p-3">12/12/12</td>
-                                <td class="p-3">Rouen-Paris</td>
-                                <td class="p-3">12:00</td>
-                                <td class="p-3">63€</td>
-                            </tr>
+                            <% for (let i=0; i <lastTrips.length; i++) {%>
+                                <tr class="table-light">
+                                    <td class="p-3">
+                                        <%= dateFormat(lastTrips[i].date)%>
+                                    </td>
+                                    <td class="p-3">
+                                        <%= lastTrips[i].departure %>-<%= lastTrips[i].arrival %>
+                                    </td>
+                                    <td class="p-3">
+                                        <%= lastTrips[i].departureTime %>
+                                    </td>
+                                    <td class="p-3">
+                                        <%= lastTrips[i].price %> €
+                                    </td>
+                                </tr>
+                                <%}%>
 
                         </table>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-danger offset-9">Home</button>
+                <a href="/search"><button type="submit" class="btn btn-danger offset-9">Home</button></a>
             </div>
         </main>
 
