--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,15 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(rgb(197, 222, 233), rgb(107, 169, 207));
-  background-repeat: no-repeat;
+  /* background: linear-gradient(rgb(197, 222, 233), rgb(107, 169, 207));
+  background-repeat: no-repeat; */
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,2e80b3+100 */
+background: #ffffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffffff 0%, #2e80b3 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ffffff 0%,#2e80b3 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ffffff 0%,#2e80b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#2e80b3',GradientType=0 ); /* IE6-9 */
+
 }
 
 #landmark {
