--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -6,7 +6,7 @@
             <h5 class="d-inline-block align-text-top m-2">Ticketac</h5>
         </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
