--- a/views/login.ejs
+++ b/views/login.ejs
@@ -58,6 +58,7 @@
                </div>
           </div>
 
+          <%- include('footer') %>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
