--- a/views/card.ejs
+++ b/views/card.ejs
@@ -49,7 +49,7 @@
                                             <%= dateFormat(card[i].date)%>
                                         </td>
                                         <td class="p-3">
-                                            <%= card[i].departureTime%>
+                                            <%= card[i].departureTime%> h
                                         </td>
                                         <td class="p-3">
                                             <%= card[i].price%> €
