--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -44,7 +44,7 @@
                                         <%= lastTrips[i].departure %>-<%= lastTrips[i].arrival %>
                                     </td>
                                     <td class="p-3">
-                                        <%= lastTrips[i].departureTime %>
+                                        <%= lastTrips[i].departureTime %> h
                                     </td>
                                     <td class="p-3">
                                         <%= lastTrips[i].price %> €
