--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="/">Connection
+                    <a class="nav-link text-danger fw-bold" href="/connect">Connection
                     </a>
                 </li>
                 <li class="nav-item">
