--- a/views/search.ejs
+++ b/views/search.ejs
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <form action="/booking" method="post">
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center mb-4">
 
                         <div class="form-group col-2 ">
                             <input type="text" name="departure" class="form-control"
@@ -48,7 +48,7 @@
                 </form>
 
                 <div class="row d-flex justify-content-center">
-                    <img id="landmark" src="/images/landmark.png" class="my-5" alt="landmark">
+                    <img id="landmark" src="/images/landmark.png" class="mt-5" alt="landmark">
                 </div>
 
             </div>
